--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,17 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "public/css/bootstrap.min.css",
+              "public/css/style.css",
+              "public/lib/animate/animate.min.css"
+            ],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "public/lib/wow/wow.min.js",
+              "public/lib/easing/easing.min.js",
+              "public/lib/waypoints/waypoints.min.js",
+              "public/js/main.js"
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
@@ -104,9 +114,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ]
+            "styles": ["src/styles.css"]
           }
         }
       }
